# AgenticSQL

./: .gitignore  README.md  agent 10.21.25.py  create_example_db.py  database_tools.py  example.db 10.21.25  main 10.21.25.py  nl_to_sql_tool.py  pyproject.toml  requirements.txt  visualization_tool.py
agenticsql/: __init__.py  agent.py  cli.py  config.py  db.py  errors.py  llm.py  sample_db.py  visualization.py
tests/: test_schema.py  test_sql_safety.py
