[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticsql"
version = "0.1.0"
description = "Productionized natural-language to SQL assistant for SQLite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain-ollama>=0.2.0",
  "pandas==2.2.3",
  "matplotlib==3.9.3",
  "tabulate>=0.9.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
agenticsql = "agenticsql.cli:main"

[tool.setuptools.packages.find]
include = ["agenticsql*"]
